add applying robots.txt
